# samyojana-sovereign-kernel

./: .env.example  .gitignore  GFF_2026_PORTAL_SUBMISSION_FINAL_PAYLOAD.md  LICENSE  README.md  SAMYOJANA_2026_OMNI_SECURE_CORE.md  SAMYOJANA_2026_PRODUCTION_CORE_IMPLEMENTATION.md  app.py  build_struct.py  build_struct.py.metadata.json  build_v2.py  build_v2.py.metadata.json  docker-compose.yml  requirements.txt  start_samyojana.sh  stop_samyojana.sh
agents/: __init__.py  orchestrator.py
config/: agents.yaml
core_engine/: Cargo.toml
core_engine/src/: async_wal.rs  outbox_relay.rs  ring_buffer.rs  telemetry.rs
crypto_layer/src/: deterministic_firewall.py  fhe_ckks_risk.py  fhe_crossborder_pool.py  hybrid_pqc.py  kms_shredder.py  ml_kem_1024.py  salt_vault.py  voprf_opaque.py
docs/: SAMYOJANA_2026_OMNI_SECURE_CORE.md
frontend/: package.json
frontend/src/app/: page.tsx
hardware_enclave/src/: attestation.rs
inference_orchestrator/src/: zedd_firewall.py
inference_orchestrator/src/slm_tier2_3/: vllm_router.py
ingress_layer/: katran_ebpf_l4.c  unified_confidential_bpf_engine.c
pitch/: index.html
static/: index.html
tests/: test_agents.py
