[package]
name = "samyojana-core"
version = "5.0.0"
edition = "2021"

[dependencies]
xsk-rs = "0.3.0"          # AF_XDP zero-copy networking
tokio-uring = "0.4.0"     # io_uring async WAL
crossbeam-utils = "0.8.1" # Lock-free utilities
crossbeam-epoch = "0.9"   # Epoch-Based Reclamation
core_affinity = "0.8"     # NUMA CPU pinning
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-throttle = "0.2.0"
rdkafka = "0.36.1"        # Kafka producer
